# trader

./: .gitignore  README.md  first_entry.py  pyproject.toml
src/trader_rl/: __init__.py
src/trader_rl/agents/: __init__.py  ppo.py
src/trader_rl/cli/: __init__.py  demo.py
src/trader_rl/data/: __init__.py  synthetic.py
src/trader_rl/env/: __init__.py  config.py  multi_asset.py
src/trader_rl/features/: __init__.py  indicators.py
src/trader_rl/models/: __init__.py  time_encoder.py
trader_rl/: __init__.py
trader_rl/agents/: __init__.py  ppo.py
trader_rl/config/: __init__.py  env.py  ppo.py
trader_rl/data/: __init__.py  synthetic.py  us_equities.py
trader_rl/envs/: __init__.py  historical_equity.py  multi_asset.py
trader_rl/features/: __init__.py  indicators.py
trader_rl/models/: __init__.py  policy.py
trader_rl/scripts/: train_demo.py  train_us_equities.py
trader_rl/utils/: __init__.py  experiment.py
